--- a/style/styles.css
+++ b/style/styles.css
@@ -2,17 +2,34 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color:#8f1414;
 }
 
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9;
+    font-family: "Great Vibes";
+    background-color: #8f1414 ;
     text-align: center;
     padding: 20px;
+  
 }
+.con{
+    width: 390px;
+    margin: 0 auto;
+    
 
+}
+.fon{
+
+background-repeat: no-repeat;
+     width: 390px;
+     padding: 50px;
+     border-radius: 25px;
+     background-color: white;
+     
+    
+}
 .invitation-container {
-    background-color: #800020;
+   
     color: white;
     padding: 30px;
     border-radius: 10px;
@@ -25,3 +42,36 @@ body {
     font-size: 36px;
     font-weight: bold;
 }
+
+.uzb,.rus{
+    width: 150px;
+    height: 50px;
+    background-color: #8f1414;
+    border-radius: 25px;
+    margin-top: 50px;
+    margin: 50px auto;
+  color: #ffffff;
+    text-align: center;
+    padding: 16px;
+    font-size: 18px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+}.uzb:hover{scale: 1.2;
+transition: 0.5s;}
+.tak{
+    font-size: 36px;
+     
+}.tak:hover{scale: 1.2;
+transition: 0.5s;}
+.name{
+    border-radius: 25px;
+    border: 1px solid;
+    border-color: black;
+    width: 150px;
+    height: 25px;
+    
+    font-family: "Great Vibes";
+    text-align: center;
+}
+.name:hover{scale: 1.2;
+transition: 0.5s;}
