--- a/style/styles.css
+++ b/style/styles.css
@@ -2,12 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color:#8f1414;
+    color:#40041e;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+    text-align: center;
+}
 body {
     font-family: "Great Vibes";
-    background-color: #8f1414 ;
+    background-color: #40041e ;
     text-align: center;
     padding: 20px;
   
@@ -28,25 +33,15 @@ background-repeat: no-repeat;
      
     
 }
-.invitation-container {
-   
-    color: white;
-    padding: 30px;
-    border-radius: 10px;
-    font-size: 24px;
-    width: 50%;
-    margin: 0 auto;
-}
 
-#time-left {
-    font-size: 36px;
-    font-weight: bold;
-}
 
-.uzb,.rus{
+
+
+.uzb{
+    cursor: pointer;
     width: 150px;
     height: 50px;
-    background-color: #8f1414;
+    background-color: #40041e;
     border-radius: 25px;
     margin-top: 50px;
     margin: 50px auto;
