--- a/style/styles.css
+++ b/style/styles.css
@@ -28,6 +28,7 @@ body {
 background-repeat: no-repeat;
      width: 280px;
      padding: 20px;
+      padding-bottom: 40px;
      border-radius: 25px;
      background-color: white;
      
