--- a/style/styles.css
+++ b/style/styles.css
@@ -28,7 +28,7 @@ body {
 background-repeat: no-repeat;
      width: 280px;
      padding: 20px;
-      padding-bottom: 40px;
+      padding-bottom: 20px;
      border-radius: 25px;
      background-color: white;
      
@@ -44,8 +44,8 @@ background-repeat: no-repeat;
     height: 50px;
     background-color: #40041e;
     border-radius: 25px;
-    margin-top: 50px;
-    margin: 50px auto;
+    
+    margin: 20px auto;
   color: #ffffff;
     text-align: center;
     padding: 16px;
@@ -61,12 +61,12 @@ transition: 0.5s;}
 transition: 0.5s;}
 .name{
     border-radius: 25px;
-    border: 1px solid;
-    border-color: black;
+    border: 1.5px solid ;
+    border-color: #40041e;
     width: 150px;
     height: 25px;
-    margin-bottom: 50px;
-    margin-top: 10px;
+    margin-bottom: 5px;
+    margin-top: 5px;
     font-family: "Great Vibes";
     text-align: center;
 }
